fix: fix layout break on small divices

--- a/style.css
+++ b/style.css
@@ -25,13 +25,13 @@
     color: #fff;
 }
 
-#timer-container {
+#pomodoro-container {
     text-align: center;
-    margin: auto;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 6rem;
+    gap: 5rem;
 }
 
 #status-list {
@@ -55,6 +55,10 @@
     background-color: var(--scent-color);
     padding: 1rem;
     border-radius: 2rem;
+}
+
+#timer-container {
+    margin: auto;
 }
 
 #timer-border {
@@ -103,7 +107,28 @@
 }
 
 #settings > img:hover {
-    
-    /* transform: ; */
     transform: rotate(180deg) scale(1.1);
+}
+
+@media (max-width: 767.98px) {
+    #status-list {
+        font-size: 0.7rem;
+    }
+
+    #time {
+        width: 10rem;
+        height: 10rem;
+    }
+
+    #time-content {
+        font-size: 4rem;
+    }
+
+    #timer-border {
+        padding: 1rem;
+    }
+
+    #graph {
+        padding: 0.5rem;
+    }
 }
